--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-        <div class= "wrapper">
-		<div id="hour-9" class="row time-block">
+        <!-- <div class= "wrapper"> -->
+		<div id="hour-09" class="row time-block">
             <div class="col-md-1 hour">
                 9AM
             </div>
@@ -57,42 +57,42 @@
             <textarea class="col-md-10 content-box"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour-1" class="row time-block">
+        <div id="hour-13" class="row time-block">
             <div class="col-md-1 hour">
                 1PM
             </div>
             <textarea class="col-md-10 content-box"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour-2" class="row time-block">
+        <div id="hour-14" class="row time-block">
             <div class="col-md-1 hour">
                 2PM
             </div>
             <textarea class="col-md-10 content-box"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour-3" class="row time-block">
+        <div id="hour-15" class="row time-block">
             <div class="col-md-1 hour">
                 3PM
             </div>
             <textarea class="col-md-10 content-box"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour-4" class="row time-block">
+        <div id="hour-16" class="row time-block">
             <div class="col-md-1 hour">
                 4PM
             </div>
             <textarea class="col-md-10 content-box"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-        <div id="hour-5" class="row time-block">
+        <div id="hour-17" class="row time-block">
             <div class="col-md-1 hour">
                 5PM
             </div>
             <textarea class="col-md-10 content-box"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-    </div>
+    <!-- </div> -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src= "assets/js/script.js"></script>
